...

        Image(
            painter = painterResource(id = R.drawable.turtle_beach),
            contentDescription = "background image of a turtle",
            modifier = Modifier
                .fillMaxSize()
                .testTag("landingScreen"),
            contentScale = ContentScale.Crop
        )

        Box(
            modifier = Modifier
                .fillMaxSize()
...

                Button(
                    onClick = { navigateToLogin() },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(40.dp)
                        .testTag("loginButton"),
                    colors = ButtonDefaults.buttonColors(containerColor = Color.White)
                ) {
                    Text(
                        text = "Login",
                        color = Color.Black
                    )
...
