...
                Spacer(modifier = Modifier.height(36.dp))

                Text(
                    text = "Welcome,",
                    modifier = Modifier
                        .padding(horizontal = 24.dp)
                        .testTag("homeScreen"),
                    color = MaterialTheme.colorScheme.onSurface,
                    style = MaterialTheme.typography.titleLarge,
                )

                Spacer(modifier = Modifier.height(12.dp))

...
                                        else -> navigateToNightSurvey()
                                    }
                                },
                                modifier = Modifier
                                    .testTag(
                                        when (page) {
                                            0 -> "morningSurvey"
                                            else -> "nightSurvey"
                                        }
                                    )
                                    .wrapContentWidth()
                                    .height(40.dp),
                                colors = ButtonDefaults.outlinedButtonColors(
...
