...
    )

    val map: Map<String, List<String>> = hashMapOf(
        "ZAK" to listOf(),
        "KYP" to listOf(),
        "RET" to listOf(),
        "LAK" to listOf("Mavrovouni", "Selinitsa", "Valtaki", "Trinisa"),
        "CHA" to listOf(),
        "KOR" to listOf(),
        "NED" to listOf(),
        "MES" to listOf()
    )

...
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Morning Survey",
                        color = MaterialTheme.colorScheme.onPrimaryContainer,
                        modifier = Modifier.testTag("morningSurveyScreen")
                    )
                },
                navigationIcon = {
                    IconButton(onClick = { navigateBack() }) {
                        Icon(
                            imageVector = Icons.Filled.ArrowBack,
...
                            modifier = Modifier
                                .weight(1f)
                                .align(alignment = Alignment.CenterVertically),
                            onIconClick = { isDateDialogShown = true },
                            imageVector = Icons.Outlined.DateRange,
                            contentDescription = "Icon to select date",
                            trailingIconTestTag = "date"
                        )

                        if (isDateDialogShown) {

                            DateDialog(
                                state = datePickerState,
...
                            modifier = Modifier
                                .weight(1f)
                                .align(alignment = Alignment.CenterVertically),
                            onIconClick = { isTimeDialogShown = true },
                            imageVector = Icons.Outlined.AccessTime,
                            contentDescription = "Icon to select time",
                            trailingIconTestTag = "time"
                        )
                    }

                    if (isTimeDialogShown) {

                        TimeDialog(state = timePickerState,
...
                        },
                        isError = state.value.invalidAreaMessage.isNotEmpty(),
                        errorMessage = state.value.invalidAreaMessage,
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(horizontal = 24.dp)
                            .testTag("area"),
                        enabledDropdown = state.value.newNestList.isEmpty() &&
                                state.value.nestIncubationList.isEmpty() &&
                                state.value.nestRelocationList.isEmpty() &&
                                state.value.nestHatchingList.isEmpty() &&
                                state.value.nestExcavationList.isEmpty()
                    )
...
                            },
                            isError = state.value.invalidBeachMessage.isNotEmpty(),
                            errorMessage = state.value.invalidBeachMessage,
                            modifier = Modifier
                                .fillMaxWidth()
                                .padding(horizontal = 24.dp)
                                .testTag("beach"),
                            enabledDropdown = state.value.newNestList.isEmpty() &&
                                    state.value.nestIncubationList.isEmpty() &&
                                    state.value.nestRelocationList.isEmpty() &&
                                    state.value.nestHatchingList.isEmpty() &&
                                    state.value.nestExcavationList.isEmpty()
                        )
...
                        FilledButton(
                            buttonText = "Submit",
                            onClick = { viewModel.sendEvent(MorningSurveyEvent.SubmitButtonClicked) },
                            modifier = Modifier
                                .fillMaxWidth()
                                .padding(horizontal = 24.dp)
                                .testTag("submitButton"),
                            enabled = state.value.date.isNotEmpty() &&
                                    state.value.time.isNotEmpty() &&
                                    state.value.area.isNotEmpty() &&
                                    state.value.beach.isNotEmpty() &&
                                    if (state.value.nestingAttemptSwitch) {
                                        state.value.numberOfAttempts.isInt()
...
